fix(equalizer): wrap the canvas

--- a/app/components/Equalizer/styles.scss
+++ b/app/components/Equalizer/styles.scss
@@ -2,3 +2,9 @@
   width: 100%;
   padding: 30px 50px;
 }
+
+.chart_wrapper {
+  margin: auto;
+  width: 80%;
+  height: 400px;
+}
